Give the order type the right name.

--- a/config/install/commerce_order.commerce_order_type.checkout_direct.yml
+++ b/config/install/commerce_order.commerce_order_type.checkout_direct.yml
@@ -1,7 +1,7 @@
 langcode: en
 status: true
-label: Default
-id: default
+label: Checkout Direct
+id: checkout_direct
 workflow: order_default
 refresh_mode: customer
 refresh_frequency: 300
